# openapi.yaml
@@ -457,6 +457,9 @@ paths:
                 custom_labels:
                   type: string
                   description: 'Custom labels.'
+                custom_docker_build_options:
+                  type: string
+                  description: 'Custom docker build options.'
                 custom_docker_run_options:
                   type: string
                   description: 'Custom docker run options.'
@@ -723,6 +726,9 @@ paths:
                 custom_labels:
                   type: string
                   description: 'Custom labels.'
+                custom_docker_build_options:
+                  type: string
+                  description: 'Custom docker build options.'
                 custom_docker_run_options:
                   type: string
                   description: 'Custom docker run options.'
@@ -957,6 +963,9 @@ paths:
                 custom_labels:
                   type: string
                   description: 'Custom labels.'
+                custom_docker_build_options:
+                  type: string
+                  description: 'Custom docker build options.'
                 custom_docker_run_options:
                   type: string
                   description: 'Custom docker run options.'
@@ -1161,6 +1170,9 @@ paths:
                 custom_labels:
                   type: string
                   description: 'Custom labels.'
+                custom_docker_build_options:
+                  type: string
+                  description: 'Custom docker build options.'
                 custom_docker_run_options:
                   type: string
                   description: 'Custom docker run options.'
@@ -1578,6 +1590,9 @@ paths:
                 custom_labels:
                   type: string
                   description: 'Custom labels.'
+                custom_docker_build_options:
+                  type: string
+                  description: 'Custom docker build options.'
                 custom_docker_run_options:
                   type: string
                   description: 'Custom docker run options.'
